[tool.poetry]
name = "pyspark-testing"
version = "0.1.0"
description = ""
authors = ["yanivrodenski <yaniv.rodenski@bigdataboutique.com>"]
readme = "README.md"
packages = [{include = "pyspark_testing"}]

[tool.poetry.dependencies]
python = "^3.11"
pyspark = "^3.4.1"
pytest-resource-path = "^1.3.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-resource-path = "^1.3.0"
chispa = "^0.9.2"
great-expectations = "^0.17.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"